FIX: Hide up/down arrows on firefox

--- a/beta/components/header/index.css
+++ b/beta/components/header/index.css
@@ -97,3 +97,7 @@ ul.menu.flex-column li.active::after {
 .right-4 {
   right: 4rem;
 }
+
+input[disabled][type=number] {
+  -moz-appearance: textfield;
+}
